--- a/demo/acs/K8S-deploy-file.yml
+++ b/demo/acs/K8S-deploy-file.yml
@@ -49,8 +49,11 @@ spec:
             secretName: azurefile-drupal-secret
             shareName: drupal-themes
             readOnly: false
-      #securityContext:  #mount the disks as www-data instead of the default Root - waiting for Azure files to support fsGroup
-        #fsGroup: 33
+      securityContext:  #mount the disks as www-data instead of the default Root - waiting for Azure files to support fsGroup
+        fsGroup: 33
+        capabilities:
+          add:
+          - SYS_ADMIN  #needed to test the mount capabilites after container boot
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
