--- a/demo/acs/K8S-deploy-file.yml
+++ b/demo/acs/K8S-deploy-file.yml
@@ -23,36 +23,36 @@ spec:
           capabilities:
             add:
             - SYS_ADMIN  #needed to test the mount capabilites after container boot
-        volumeMounts:
-        - mountPath: /var/www/html/modules
-          name: drupal-modules
-        - mountPath: /var/www/html/profiles
-          name: drupal-profiles
-        - mountPath: /var/www/html/sites
-          name: drupal-sites
-        - mountPath: /var/www/html/themes
-          name: drupal-themes
-      volumes:
-        - name: drupal-modules
-          azureFile:
-            secretName: azurefile-drupal-secret
-            shareName: drupal-modules
-            readOnly: false
-        - name: drupal-profiles
-          azureFile:
-            secretName: azurefile-drupal-secret
-            shareName: drupal-profiles
-            readOnly: false
-        - name: drupal-sites
-          azureFile:
-            secretName: azurefile-drupal-secret
-            shareName: drupal-sites
-            readOnly: false
-        - name: drupal-themes
-          azureFile:
-            secretName: azurefile-drupal-secret
-            shareName: drupal-themes
-            readOnly: false
+      #   volumeMounts:
+      #   - mountPath: /var/www/html/modules
+      #     name: drupal-modules
+      #   - mountPath: /var/www/html/profiles
+      #     name: drupal-profiles
+      #   - mountPath: /var/www/html/sites
+      #     name: drupal-sites
+      #   - mountPath: /var/www/html/themes
+      #     name: drupal-themes
+      # volumes:
+      #   - name: drupal-modules
+      #     azureFile:
+      #       secretName: azurefile-drupal-secret
+      #       shareName: drupal-modules
+      #       readOnly: false
+      #   - name: drupal-profiles
+      #     azureFile:
+      #       secretName: azurefile-drupal-secret
+      #       shareName: drupal-profiles
+      #       readOnly: false
+      #   - name: drupal-sites
+      #     azureFile:
+      #       secretName: azurefile-drupal-secret
+      #       shareName: drupal-sites
+      #       readOnly: false
+      #   - name: drupal-themes
+      #     azureFile:
+      #       secretName: azurefile-drupal-secret
+      #       shareName: drupal-themes
+      #       readOnly: false
       securityContext:  #mount the disks as www-data instead of the default Root - waiting for Azure files to support fsGroup
         fsGroup: 33
 ---
