--- a/demo/acs/nfs-pv.yml
+++ b/demo/acs/nfs-pv.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs
+  name: nfs-sites-pv
 spec:
   capacity:
     storage: 1Mi
@@ -10,4 +10,4 @@ spec:
   nfs:
     # FIXME: use the right IP
     server: 10.244.1.4
-    path: "/exports"
+    path: "/exports/sites"
