--- a/demo/acs/K8S-deploy-nfs-server.yml
+++ b/demo/acs/K8S-deploy-nfs-server.yml
@@ -32,17 +32,17 @@ spec:
 kind: StorageClass
 apiVersion: storage.k8s.io/v1beta1
 metadata:
-  name: az-std-disk
+  name: az-premium-disk
 provisioner: kubernetes.io/azure-disk
 parameters:
-  skuName: Standard_LRS
+  skuName: Premium_LRS
 ---
 apiVersion: "v1"
 kind: "PersistentVolumeClaim"
 metadata:
   name: "nfs-server-pvc"
   annotations:
-    volume.beta.kubernetes.io/storage-class: "az-std-disk"
+    volume.beta.kubernetes.io/storage-class: "az-premium-disk"
 spec:
   accessModes:
     - "ReadWriteOnce"
