--- a/demo/acs/pv-nfs-server.yml
+++ b/demo/acs/pv-nfs-server.yml
@@ -1,17 +1,17 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1beta1
 metadata:
-  name: slow
+  name: fast
 provisioner: kubernetes.io/azure-disk
 parameters:
-  skuName: Standard_LRS
+  skuName: Premium_LRS
 ---
 apiVersion: "v1"
 kind: "PersistentVolumeClaim"
 metadata:
   name: "nfs-server-pvc"
   annotations:
-    volume.beta.kubernetes.io/storage-class: "slow"
+    volume.beta.kubernetes.io/storage-class: "fast"
 spec:
   accessModes:
     - "ReadWriteOnce"
